<?xml version="1.0"?>
<package format="2">
  <name>ros_talon</name>
  <version>1.0.0</version>
  <description>Provide an interface to CTR's Talon SRX through CAN protocol using socketcan_bridge.</description>

  <maintainer email="javier.torresb@gmail.com">Javier Torres B</maintainer>

  <license>BSD</license>

  <author email="javier.torresb@gmail.com">Javier Torres B</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>can_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
